# gooker

./: README.md  pyproject.toml
db/: init.sql
db/migrations/: 2023-04-01-0-init.sql
gooker/: __main__.py  args.py  base.py  database.py  notify.py  search.py
gooker/clients/: __init__.py  ezlinks.py  foreup.py  letsgogolf.py  teeitup.py
